# AutoBackup

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
src/AutoBackup/: __init__.py  __main__.py  logger.py
src/AutoBackup/backup/: backup.py  logger.py  utils.py
src/AutoBackup/dashboard/: __init__.py  app.py  runner.py
src/AutoBackup/dashboard/static/js/: app.js  config_form.js  dashboard.js  header.js  toasts.js
src/AutoBackup/dashboard/templates/: base.html  config_form.html  index.html
src/AutoBackup/startup/: __init__.py  ensure.py  registry.py  startup.py
src/backup/: __init__.py  _utils.py  backup.py  client_secret.json  drive.py  logger.py  scheduler.py
src/dashboard/: __init__.py  __main__.py  app.py  logger.py  runner.py  wrapper.py
src/dashboard/static/: style.css
src/dashboard/static/js/: config-form.js  config_form.js  dashboard.js  drive_browser.js  header.js  theme.js  toasts.js
src/dashboard/templates/: 404.html  base.html  config_form.html  edit_backup.html  edit_config.html  index.html  new_backup.html
src/startup/: __init__.py  ensure.py  logger.py  registry.py  startup.py
tests/: conftest.py  test_app.py  test_backup.py  test_dashboard.py  test_dashboard_app.py  test_drive.py  test_packages.py  test_runner.py  test_startup.py
tests/old/: test_runner.py
