[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoBackup"
version = "0.1.0"
description = "Automated backup tool with web dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil>=2.9.0",
    "PyDrive2>=1.21.3",
    "Flask>=3.1.3",
    "pystray>=0.19.5",
    "Pillow>=12.2.0",
    "pywebview>=6.2.1",
    "plyer>=2.1.0; sys_platform != 'darwin'",
    "plyer[macosx]>=2.1.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
AutoBackup = "AutoBackup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
